CEGISAssignment/myparser/SygusParser.py
# Generated from Sygus.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class SygusParser ( Parser ):

    grammarFileName = "Sygus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"'set-logic'", u"')'", u"'TROP'", 
                     u"'PROB'", u"'BOOL'", u"'set-weight'", u"'optimize'", 
                     u"'weight-constraint'", u"'declare-var'", u"'define-sort'", 
                     u"'BitVec'", u"'Bool'", u"'Int'", u"'Real'", u"'Enum'", 
                     u"'Array'", u"'true'", u"'false'", u"'::'", u"'set-options'", 
                     u"'define-fun'", u"'declare-fun'", u"'let'", u"'check-synth'", 
                     u"'constraint'", u"'synth-fun'", u"':'", u"'Constant'", 
                     u"'Vairiable'", u"'InputVariable'", u"'LocalVariable'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"WS", u"INTCONST", u"BVCONST", u"REALCONST", 
                      u"SYMBOL", u"QUOTEDLIT" ]

    RULE_start = 0
    RULE_prog = 1
    RULE_setLogicCmd = 2
    RULE_weightPlus = 3
    RULE_weight = 4
    RULE_setWeightCmd = 5
    RULE_cmdPlus = 6
    RULE_cmd = 7
    RULE_weightOptimizationCmd = 8
    RULE_weightPair = 9
    RULE_weightConstraintCmd = 10
    RULE_varDeclCmd = 11
    RULE_sortDefCmd = 12
    RULE_sortExpr = 13
    RULE_boolConst = 14
    RULE_enumConst = 15
    RULE_ecList = 16
    RULE_symbolPlus = 17
    RULE_setOptsCmd = 18
    RULE_optList = 19
    RULE_symbolPairPlus = 20
    RULE_symbolPair = 21
    RULE_funDefCmd = 22
    RULE_funDeclCmd = 23
    RULE_sortStar = 24
    RULE_argList = 25
    RULE_symbolSortPairStar = 26
    RULE_symbolSortPair = 27
    RULE_term = 28
    RULE_letTerm = 29
    RULE_letBindingTermPlus = 30
    RULE_letBindingTerm = 31
    RULE_termStar = 32
    RULE_literal = 33
    RULE_ntDefPlus = 34
    RULE_ntDef = 35
    RULE_gTermPlus = 36
    RULE_checkSynthCmd = 37
    RULE_constraintCmd = 38
    RULE_synthFunCmd = 39
    RULE_gTermWeighted = 40
    RULE_literalPlus = 41
    RULE_gTerm = 42
    RULE_letGTerm = 43
    RULE_letBindingGTermPlus = 44
    RULE_letBindingGTerm = 45
    RULE_gTermStar = 46

    ruleNames =  [ u"start", u"prog", u"setLogicCmd", u"weightPlus", u"weight", 
                   u"setWeightCmd", u"cmdPlus", u"cmd", u"weightOptimizationCmd", 
                   u"weightPair", u"weightConstraintCmd", u"varDeclCmd", 
                   u"sortDefCmd", u"sortExpr", u"boolConst", u"enumConst", 
                   u"ecList", u"symbolPlus", u"setOptsCmd", u"optList", 
                   u"symbolPairPlus", u"symbolPair", u"funDefCmd", u"funDeclCmd", 
                   u"sortStar", u"argList", u"symbolSortPairStar", u"symbolSortPair", 
                   u"term", u"letTerm", u"letBindingTermPlus", u"letBindingTerm", 
                   u"termStar", u"literal", u"ntDefPlus", u"ntDef", u"gTermPlus", 
                   u"checkSynthCmd", u"constraintCmd", u"synthFunCmd", u"gTermWeighted", 
                   u"literalPlus", u"gTerm", u"letGTerm", u"letBindingGTermPlus", 
                   u"letBindingGTerm", u"gTermStar" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    WS=33
    INTCONST=34
    BVCONST=35
    REALCONST=36
    SYMBOL=37
    QUOTEDLIT=38

    def __init__(self, input):
        super(SygusParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def prog(self):
            return self.getTypedRuleContext(SygusParser.ProgContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_start

        def enterRule(self, listener):
            if hasattr(listener, "enterStart"):
                listener.enterStart(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStart"):
                listener.exitStart(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStart"):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = SygusParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.prog()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.ProgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def setWeightCmd(self):
            return self.getTypedRuleContext(SygusParser.SetWeightCmdContext,0)


        def cmdPlus(self):
            return self.getTypedRuleContext(SygusParser.CmdPlusContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_prog

        def enterRule(self, listener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitProg"):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SygusParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.setWeightCmd()
            self.state = 97
            self.cmdPlus(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetLogicCmdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.SetLogicCmdContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(SygusParser.SYMBOL, 0)

        def getRuleIndex(self):
            return SygusParser.RULE_setLogicCmd

        def enterRule(self, listener):
            if hasattr(listener, "enterSetLogicCmd"):
                listener.enterSetLogicCmd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSetLogicCmd"):
                listener.exitSetLogicCmd(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSetLogicCmd"):
                return visitor.visitSetLogicCmd(self)
            else:
                return visitor.visitChildren(self)




    def setLogicCmd(self):

        localctx = SygusParser.SetLogicCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_setLogicCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(SygusParser.T__0)
            self.state = 100
            self.match(SygusParser.T__1)
            self.state = 101
            self.match(SygusParser.SYMBOL)
            self.state = 102
            self.match(SygusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WeightPlusContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.WeightPlusContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(SygusParser.SYMBOL, 0)

        def weight(self):
            return self.getTypedRuleContext(SygusParser.WeightContext,0)


        def weightPlus(self):
            return self.getTypedRuleContext(SygusParser.WeightPlusContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_weightPlus

        def enterRule(self, listener):
            if hasattr(listener, "enterWeightPlus"):
                listener.enterWeightPlus(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWeightPlus"):
                listener.exitWeightPlus(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitWeightPlus"):
                return visitor.visitWeightPlus(self)
            else:
                return visitor.visitChildren(self)



    def weightPlus(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SygusParser.WeightPlusContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_weightPlus, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(SygusParser.T__0)
            self.state = 106
            self.match(SygusParser.SYMBOL)
            self.state = 107
            self.weight()
            self.state = 108
            self.match(SygusParser.T__2)
            self._ctx.stop = self._input.LT(-1)
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SygusParser.WeightPlusContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_weightPlus)
                    self.state = 110
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 111
                    self.match(SygusParser.T__0)
                    self.state = 112
                    self.match(SygusParser.SYMBOL)
                    self.state = 113
                    self.weight()
                    self.state = 114
                    self.match(SygusParser.T__2) 
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class WeightContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.WeightContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SygusParser.RULE_weight

        def enterRule(self, listener):
            if hasattr(listener, "enterWeight"):
                listener.enterWeight(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWeight"):
                listener.exitWeight(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitWeight"):
                return visitor.visitWeight(self)
            else:
                return visitor.visitChildren(self)




    def weight(self):

        localctx = SygusParser.WeightContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_weight)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SygusParser.T__3) | (1 << SygusParser.T__4) | (1 << SygusParser.T__5))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetWeightCmdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.SetWeightCmdContext, self).__init__(parent, invokingState)
            self.parser = parser

        def weightPlus(self):
            return self.getTypedRuleContext(SygusParser.WeightPlusContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_setWeightCmd

        def enterRule(self, listener):
            if hasattr(listener, "enterSetWeightCmd"):
                listener.enterSetWeightCmd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSetWeightCmd"):
                listener.exitSetWeightCmd(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSetWeightCmd"):
                return visitor.visitSetWeightCmd(self)
            else:
                return visitor.visitChildren(self)




    def setWeightCmd(self):

        localctx = SygusParser.SetWeightCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_setWeightCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(SygusParser.T__0)
            self.state = 124
            self.match(SygusParser.T__6)
            self.state = 125
            self.weightPlus(0)
            self.state = 126
            self.match(SygusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdPlusContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.CmdPlusContext, self).__init__(parent, invokingState)
            self.parser = parser

        def cmd(self):
            return self.getTypedRuleContext(SygusParser.CmdContext,0)


        def cmdPlus(self):
            return self.getTypedRuleContext(SygusParser.CmdPlusContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_cmdPlus

        def enterRule(self, listener):
            if hasattr(listener, "enterCmdPlus"):
                listener.enterCmdPlus(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCmdPlus"):
                listener.exitCmdPlus(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCmdPlus"):
                return visitor.visitCmdPlus(self)
            else:
                return visitor.visitChildren(self)



    def cmdPlus(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SygusParser.CmdPlusContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_cmdPlus, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.cmd()
            self._ctx.stop = self._input.LT(-1)
            self.state = 135
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SygusParser.CmdPlusContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_cmdPlus)
                    self.state = 131
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 132
                    self.cmd() 
                self.state = 137
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class CmdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.CmdContext, self).__init__(parent, invokingState)
            self.parser = parser

        def setLogicCmd(self):
            return self.getTypedRuleContext(SygusParser.SetLogicCmdContext,0)


        def funDefCmd(self):
            return self.getTypedRuleContext(SygusParser.FunDefCmdContext,0)


        def funDeclCmd(self):
            return self.getTypedRuleContext(SygusParser.FunDeclCmdContext,0)


        def synthFunCmd(self):
            return self.getTypedRuleContext(SygusParser.SynthFunCmdContext,0)


        def checkSynthCmd(self):
            return self.getTypedRuleContext(SygusParser.CheckSynthCmdContext,0)


        def constraintCmd(self):
            return self.getTypedRuleContext(SygusParser.ConstraintCmdContext,0)


        def sortDefCmd(self):
            return self.getTypedRuleContext(SygusParser.SortDefCmdContext,0)


        def setOptsCmd(self):
            return self.getTypedRuleContext(SygusParser.SetOptsCmdContext,0)


        def weightConstraintCmd(self):
            return self.getTypedRuleContext(SygusParser.WeightConstraintCmdContext,0)


        def weightOptimizationCmd(self):
            return self.getTypedRuleContext(SygusParser.WeightOptimizationCmdContext,0)


        def varDeclCmd(self):
            return self.getTypedRuleContext(SygusParser.VarDeclCmdContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_cmd

        def enterRule(self, listener):
            if hasattr(listener, "enterCmd"):
                listener.enterCmd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCmd"):
                listener.exitCmd(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCmd"):
                return visitor.visitCmd(self)
            else:
                return visitor.visitChildren(self)




    def cmd(self):

        localctx = SygusParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cmd)
        try:
            self.state = 149
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.setLogicCmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.funDefCmd()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.funDeclCmd()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.synthFunCmd()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.checkSynthCmd()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 143
                self.constraintCmd()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 144
                self.sortDefCmd()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 145
                self.setOptsCmd()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 146
                self.weightConstraintCmd()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 147
                self.weightOptimizationCmd()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 148
                self.varDeclCmd()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WeightOptimizationCmdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.WeightOptimizationCmdContext, self).__init__(parent, invokingState)
            self.parser = parser

        def weightPair(self):
            return self.getTypedRuleContext(SygusParser.WeightPairContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_weightOptimizationCmd

        def enterRule(self, listener):
            if hasattr(listener, "enterWeightOptimizationCmd"):
                listener.enterWeightOptimizationCmd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWeightOptimizationCmd"):
                listener.exitWeightOptimizationCmd(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitWeightOptimizationCmd"):
                return visitor.visitWeightOptimizationCmd(self)
            else:
                return visitor.visitChildren(self)




    def weightOptimizationCmd(self):

        localctx = SygusParser.WeightOptimizationCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_weightOptimizationCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(SygusParser.T__0)
            self.state = 152
            self.match(SygusParser.T__7)
            self.state = 153
            self.weightPair()
            self.state = 154
            self.match(SygusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WeightPairContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.WeightPairContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(SygusParser.SYMBOL, 0)

        def symbolPlus(self):
            return self.getTypedRuleContext(SygusParser.SymbolPlusContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_weightPair

        def enterRule(self, listener):
            if hasattr(listener, "enterWeightPair"):
                listener.enterWeightPair(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWeightPair"):
                listener.exitWeightPair(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitWeightPair"):
                return visitor.visitWeightPair(self)
            else:
                return visitor.visitChildren(self)




    def weightPair(self):

        localctx = SygusParser.WeightPairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_weightPair)
        try:
            self.state = 162
            token = self._input.LA(1)
            if token in [SygusParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(SygusParser.T__0)
                self.state = 157
                self.match(SygusParser.SYMBOL)
                self.state = 158
                self.symbolPlus(0)
                self.state = 159
                self.match(SygusParser.T__2)

            elif token in [SygusParser.SYMBOL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(SygusParser.SYMBOL)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WeightConstraintCmdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.WeightConstraintCmdContext, self).__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(SygusParser.TermContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_weightConstraintCmd

        def enterRule(self, listener):
            if hasattr(listener, "enterWeightConstraintCmd"):
                listener.enterWeightConstraintCmd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWeightConstraintCmd"):
                listener.exitWeightConstraintCmd(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitWeightConstraintCmd"):
                return visitor.visitWeightConstraintCmd(self)
            else:
                return visitor.visitChildren(self)




    def weightConstraintCmd(self):

        localctx = SygusParser.WeightConstraintCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_weightConstraintCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(SygusParser.T__0)
            self.state = 165
            self.match(SygusParser.T__8)
            self.state = 166
            self.term()
            self.state = 167
            self.match(SygusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclCmdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.VarDeclCmdContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(SygusParser.SYMBOL, 0)

        def sortExpr(self):
            return self.getTypedRuleContext(SygusParser.SortExprContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_varDeclCmd

        def enterRule(self, listener):
            if hasattr(listener, "enterVarDeclCmd"):
                listener.enterVarDeclCmd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVarDeclCmd"):
                listener.exitVarDeclCmd(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitVarDeclCmd"):
                return visitor.visitVarDeclCmd(self)
            else:
                return visitor.visitChildren(self)




    def varDeclCmd(self):

        localctx = SygusParser.VarDeclCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_varDeclCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(SygusParser.T__0)
            self.state = 170
            self.match(SygusParser.T__9)
            self.state = 171
            self.match(SygusParser.SYMBOL)
            self.state = 172
            self.sortExpr()
            self.state = 173
            self.match(SygusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SortDefCmdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SygusParser.SortDefCmdContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(SygusParser.SYMBOL, 0)

        def sortExpr(self):
            return self.getTypedRuleContext(SygusParser.SortExprContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_sortDefCmd

        def enterRule(self, listener):
            if hasattr(listener, "enterSortDefCmd"):
                listener.enterSortDefCmd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSortDefCmd"):
                listener.exitSortDefCmd(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSortDefCmd"):
                return visitor.visitSortDefCmd(self)
            else:
                return visitor.visitChildren(self)




    def sortDefCmd(self):

        localctx = SygusParser.SortDefCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_sortDefCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(SygusParser.T__0)
            self.state = 176
            self.match(SygusParser.T__10)
            self.state = 177
            self.match(SygusParser.SYMBOL)
            self.state = 178
            self.sortExpr()
            self.state = 179
            self.match(SygusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SortExprContext(ParserRuleContext):
